<resources>
    <string name="app_name">Weather Ap</string>
    <string name="rain_text">Rain</string>
    <string name="wind_speed_text">Wind speed</string>
    <string name="humidity_text">Humidity</string>
    <string name="today_text">Today</string>
    <string name="next_7_day_text"><![CDATA[Next 7 Day >]]></string>
    <string name="fav_screen_text">Open favorite screen</string>
    <string name="favorite_text">Favorite</string>
    <string name="search_menu_text">Search</string>
</resources>